# graph_segment_for_gnn_tracking

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  download_data.py  eval_pybinding.py  pyproject.toml
.github/workflows/: wheels.yml
src/: CMakeLists.txt  cugraph_cc_and_walk.cu  test_cugraph_wcc.cxx  walk_through.cxx
src/cpp_core/: CMakeLists.txt  cc_and_walk.cxx
src/cpp_core/include/graph_segment/: cc_and_walk.h
src/cpp_pybind11/: CMakeLists.txt  walk_through_binding.cxx
src/cpp_test/: CMakeLists.txt  walk_through.cxx
src/graph_segment/: __init__.py  load.py
src/include/: cugraph_wcc.h
src/pybinding/: CMakeLists.txt  walk_through_binding.cxx
